--- a/index.html
+++ b/index.html
@@ -50,3 +50,38 @@
       font-size: 18px;
       border-radius: 8px;
       text-decoration: none;
+      font-weight: bold;
+      color: #fff;
+    }
+    .call { background: #28a745; }
+    .whatsapp { background: #25d366; }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      color: #555;
+      font-size: 14px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    Güvenilir Taksi Hizmeti
+  </header>
+
+  <section class="hero">
+    <h1>7/24 Taksi Hizmeti</h1>
+    <p>Hızlı, güvenli ve konforlu ulaşım için hemen arayın.</p>
+  </section>
+
+  <div class="contact-box">
+    <h2>Bize Ulaşın</h2>
+    <a href="tel:+905465697505" class="call">📞 Hemen Ara</a>
+    <a href="https://wa.me/90555XXXXXXX" class="whatsapp">💬 WhatsApp'tan Yaz</a>
+  </div>
+
+  <footer>
+    © 2025 Tüm Hakları Saklıdır - Taksi Hizmeti
+  </footer>
+</body>
+</html>
