--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div class="contact-box">
     <h2>Bize Ulaşın</h2>
     <a href="tel:+905465697505" class="call">📞 Hemen Ara</a>
-    <a href="https://wa.me/+905465697505" class="whatsapp">💬 WhatsApp'tan Yaz</a>
+    <a href="https://wa.me/05465697505" class="whatsapp">💬 WhatsApp'tan Yaz</a>
   </div>
 
   <footer>
