--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+  <meta name="google-site-verification" content="THI9B1kqitd0HXBr7TsLBUI5oXY2wcCOjrkht8wVze8" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Taksi Hizmeti - Hızlı İletişim</title>
