--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 </head>
 <body>
   <header>
-    Güvenilir Taksi Hizmeti
+    Nazilli'de Güvenilir Taksi Hizmeti
   </header>
 
   <section class="hero">
     <h1>7/24 Taksi Hizmeti</h1>
-    <p>Hızlı, güvenli ve konforlu ulaşım için hemen arayın.</p>
+    <p>Hızlı, güvenli ve konforlu ulaşım</p>
   </section>
 
   <div class="contact-box">
@@ -82,7 +82,7 @@
   </div>
 
   <footer>
-    © 2025 Tüm Hakları Saklıdır - Taksi Hizmeti
+    © 2025 Tüm Hakları Saklıdır - Taksi Hizmeti Nazilli
   </footer>
 </body>
 </html>
