--- a/index.html
+++ b/index.html
@@ -1,88 +1,64 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta name="google-site-verification" content="THI9B1kqitd0HXBr7TsLBUI5oXY2wcCOjrkht8wVze8" />
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Taksi Hizmeti - Hızlı İletişim</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f7f7f7;
-    }
-
-    header {
-      background: #000;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-      font-size: 24px;
-    }
-
-    .hero {
-      background: #ffd000;
-      padding: 40px 20px;
-      text-align: center;
-    }
-    .hero h1 {
-      margin: 0;
-      font-size: 32px;
-    }
-    .hero p {
-      margin: 10px 0;
-      font-size: 18px;
-    }
-
-    .contact-box {
-      background: white;
-      width: 90%;
-      max-width: 500px;
-      margin: 20px auto;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    .contact-box a {
-      display: block;
-      margin: 10px 0;
-      padding: 15px;
-      font-size: 18px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      color: #fff;
-    }
-    .call { background: #28a745; }
-    .whatsapp { background: #25d366; }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      color: #555;
-      font-size: 14px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nazilli Taksi | 7/24 Hizmet</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #111;
+            color: #fff;
+            text-align: center;
+        }
+        header {
+            background: #f7c200;
+            color: #000;
+            padding: 20px;
+            font-size: 24px;
+            font-weight: bold;
+        }
+        .btn {
+            display: block;
+            width: 80%;
+            margin: 15px auto;
+            padding: 15px;
+            background: #f7c200;
+            color: #000;
+            font-size: 20px;
+            text-decoration: none;
+            border-radius: 10px;
+            font-weight: bold;
+        }
+        .gallery img {
+            width: 90%;
+            border-radius: 10px;
+            margin-top: 20px;
+            border: 2px solid #f7c200;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    Nazilli'de Güvenilir Taksi Hizmeti
-  </header>
 
-  <section class="hero">
-    <h1>7/24 Taksi Hizmeti</h1>
-    <p>Hızlı, güvenli ve konforlu ulaşım</p>
-  </section>
+<header>Nazilli Taksi - 7/24 Hizmet</header>
 
-  <div class="contact-box">
-    <h2>Bize Ulaşın</h2>
-    <a href="tel:+905465697505" class="call">📞 Hemen Ara</a>
-    <a href="https://wa.me/05465697505" class="whatsapp">💬 WhatsApp'tan Yaz</a>
-  </div>
+<h2>Hızlı Ulaşım İçin Arayın</h2>
 
-  <footer>
-    © 2025 Tüm Hakları Saklıdır - Taksi Hizmeti Nazilli
-  </footer>
+<!-- Telefon Arama -->
+<a class="btn" href="tel:+905465697505">📞 Hemen Ara: 0546 569 75 05</a>
+
+<!-- WhatsApp -->
+<a class="btn" href="https://wa.me/905465697505">💬 WhatsApp ile Yaz</a>
+
+<h2>Araç Görselleri</h2>
+
+<div class="gallery">
+    <img src="IMG-20251114-WA0002.jpg" alt="Taksi Görsel 1">
+    <img src="IMG20251030045353_BURST000_COVER (1).jpg" alt="Taksi Görsel 2">
+</div>
+
+<br><br>
 </body>
 </html>
