--- a/index.html
+++ b/index.html
@@ -52,11 +52,16 @@
 <!-- WhatsApp -->
 <a class="btn" href="https://wa.me/905465697505">💬 WhatsApp ile Yaz</a>
 
-<h2>Araç Görselleri</h2>
+<h2>7/24</h2>
 
 <div class="gallery">
-    <img src="IMG-20251114-WA0002.jpg" alt="Taksi Görsel 1">
+    <img src="IMG-20251114-WA0002 (1).jpg" alt="Taksi Görsel 1">
     <img src="IMG20251030045353_BURST000_COVER (1).jpg" alt="Taksi Görsel 2">
+    <img src="IMG-20251205-WA0002.jpg" alt="Taksi Görsel 3">
+    <img src="IMG-20251205-WA0003.jpg" alt="Taksi Görsel 4">
+    <img src="IMG20251029013135.jpg" alt="Taksi Görsel 5">
+    <img src="IMG20251111054907 (1).jpg" alt="Taksi Görsel 6">
+    <img src="IMG_20251205_005445.jpg" alt="Taksi Görsel 7">
 </div>
 
 <br><br>
