--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 </head>
 <body>
 
-<header>Nazilli Taksi - 7/24 Hizmet</header>
+<header>Nazilli'de Güvenilir Taksi Hizmeti</header>
 
-<h2>Hızlı Ulaşım İçin Arayın</h2>
+<h2>Şehiriçi Şehirdışı</h2>
 
 <!-- Telefon Arama -->
 <a class="btn" href="tel:+905465697505">📞 Hemen Ara: 0546 569 75 05</a>
