--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+    <meta name="google-site-verification" content="kAd-cCN7ft3ZH_4vzjsQ4JMckWaWVhxAM2NEaqBLJvc" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nazilli Taksi | 7/24 Hizmet</title>
