--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+    <!-- SEO Tagları -->
+<meta name="description" content="Nazilli 7/24 Taksi Hizmeti. Hızlı, güvenli ve konforlu ulaşım. Hemen ara: 0546 569 75 05">
+<meta name="keywords" content="Nazilli taksi, Nazilli 7/24 taksi, taksi çağır, hızlı taksi, güvenilir taksi, nazilli taksi durağı">
+<meta name="author" content="Nazilli Taksi">
+
+<!-- Sosyal Medya (Open Graph) -->
+<meta property="og:title" content="Nazilli Taksi - 7/24 Hizmet">
+<meta property="og:description" content="Nazilli’de hızlı ve güvenilir taksi hizmeti. WhatsApp’tan yazabilirsin!">
+<meta property="og:image" content="IMG-20251114-WA0002.jpg">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://nazillitaksi.github.io">
+
+<!-- Google Mobil Uyumluluk -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Google Index -->
+<meta name="robots" content="index, follow">
     <meta name="google-site-verification" content="kAd-cCN7ft3ZH_4vzjsQ4JMckWaWVhxAM2NEaqBLJvc" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
