--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 <h2>Şehiriçi Şehirdışı</h2>
 
 <!-- Telefon Arama -->
-<a class="btn" href="tel:+905465697505">📞 Hemen Ara: 0546 569 75 05</a>
+<a class="btn" href="tel:+905465697505">📞 Hemen Ara</a>
 
 <!-- WhatsApp -->
-<a class="btn" href="https://wa.me/905465697505">💬 WhatsApp ile Yaz</a>
+<a class="btn" href="https://wa.me/905465697505">💬 WhatsApp</a>
 
 <h2>7/24</h2>
 
