--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 </head>
 <body>
 
-<header>Nazilli'de Güvenilir Taksi Hizmeti</header>
+<h1 style="font-size:32px; margin-top:20px; letter-spacing:2px;">🚕 NAZİLLİ TAKSİ</h1>
+    
+    <header>Nazilli'de Güvenilir Taksi Hizmeti</header>
 
 <h2>Şehiriçi Şehirdışı</h2>
 
