--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
 
-<h1 style="font-size:32px; margin-top:20px; letter-spacing:2px;">🚕 NAZİLLİ TAKSİ</h1>
+<h1 style="font-size:32px; margin-top:20px; letter-spacing:2px;">🚕 TAKSİ 🚕</h1>
     
     <header>Nazilli'de Güvenilir Taksi Hizmeti</header>
 
