--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta property="og:description" content="Nazilli’de hızlı ve güvenilir taksi hizmeti. WhatsApp’tan yazabilirsin!">
 <meta property="og:image" content="IMG-20251114-WA0002.jpg">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://nazillitaksi.github.io">
+<meta property="og:url" content="https://nazilliaydintaksi.github.io">
 
 <!-- Google Mobil Uyumluluk -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
